--- a/paginario/index.html
+++ b/paginario/index.html
@@ -20,7 +20,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            flex-direction: column;.
+            flex-direction: column; /* Corrigido: removido ponto final errado */
         }
 
         .caixa {
@@ -58,7 +58,7 @@
             border-radius: 25px;
             cursor: pointer;
             text-decoration: none;
-            transition: background 0.3s;
+            transition: background-color 0.3s ease; /* Corrigido */
         }
 
         .botao:hover {
