--- a/paginario/inicio.html
+++ b/paginario/inicio.html
@@ -5,6 +5,18 @@
     <title>Página Inicial</title>
     <link rel="stylesheet" href="img">
 <style>
+
+.download-area a {
+    color: #654321;
+    padding: 5px 12px;
+    text-decoration: none;
+    font-weight: bold;
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    transition: background 0.2s;
+}
+
 body {
     margin: 0;
     font-family: 'Georgia', serif;
@@ -52,7 +64,7 @@ h1 {
     gap: 35px 25px;
     max-width: 1200px;
     margin: 40px auto;
-    padding: 0 18px;
+    padding: 18px 18px;
 }
 
 .book-item {
@@ -144,70 +156,133 @@ footer span {
     <main>
         <section class="book-grid">
 
-            <div class="book-item">
-                <h2>Orgulho e Preconceito</h2>
-                <div class="book-cover">
-                    <img src="img/image 11 (1).png" alt="Orgulho e Preconceito" />
-                    <span class="age age-14">14+</span>
-                </div>
-            </div>
+<div class="book-item">
+    <h2>Orgulho e Preconceito</h2>
+    <div class="book-cover">
+        <img src="img/image 11 (1).png" alt="Orgulho e Preconceito" />
+        <span class="age age-14">14+</span>
+    </div>
+    <div class="download-area">
+        <a href="img/orgulho-e-preconceito.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="img/pdf-icon.png" alt="PDF" style="width:20px; vertical-align:middle; margin-right:5px;" />
+        </a>
+        <a href="img/orgulho-e-preconceito.epub" target="_blank" rel="noopener noreferrer">
+            <img src="img/epub-icon.png" alt="EPUB" style="width:20px; vertical-align:middle; margin-right:8px;" />
+        </a>
+    </div>
+</div>
 
-            <div class="book-item">
-                <h2>Seus Trinta Melhores Contos</h2>
-                <div class="book-cover">
-                    <img src="img/image 11.png" alt="Seus Trinta Melhores Contos" />
-                    <span class="age age-16">16+</span>
-                </div>
-            </div>
+<div class="book-item">
+    <h2>Seus Trinta Melhores Contos</h2>
+    <div class="book-cover">
+        <img src="img/image 15.png" alt="Seus Trinta Melhores Contos" />
+        <span class="age age-16">16+</span>
+    </div>
+    <div class="download-area">
+        <a href="img/seus-trinta-melhores-contos.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="img/pdf-icon.png" alt="PDF" style="width:20px; vertical-align:middle; margin-right:5px;" />
+        </a>
+        <a href="img/seus-trinta-melhores-contos.epub" target="_blank" rel="noopener noreferrer">
+            <img src="img/epub-icon.png" alt="EPUB" style="width:20px; vertical-align:middle; margin-right:8px;" />
+        </a>
+    </div>
+</div>
 
-            <div class="book-item">
-                <h2>Dom Casmurro</h2>
-                <div class="book-cover">
-                    <img src="img/image 10.png" alt="Dom Casmurro" />
-                    <span class="age age-16">16+</span>
-                </div>
-            </div>
+<div class="book-item">
+    <h2>Dom Casmurro</h2>
+    <div class="book-cover">
+        <img src="img/image 11.png" alt="Dom Casmurro" />
+        <span class="age age-16">16+</span>
+    </div>
+    <div class="download-area">
+        <a href="img/dom-casmurro.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="img/pdf-icon.png" alt="PDF" style="width:20px; vertical-align:middle; margin-right:5px;" />
+        </a>
+        <a href="img/dom-casmurro.epub" target="_blank" rel="noopener noreferrer">
+            <img src="img/epub-icon.png" alt="EPUB" style="width:20px; vertical-align:middle; margin-right:8px;" />
+        </a>
+    </div>
+</div>
 
-            <div class="book-item">
-                <h2>O Cortiço</h2>
-                <div class="book-cover">
-                    <img src="img/image 15.png" alt="O Cortiço" />
-                    <span class="age age-16">16+</span>
-                </div>
-            </div>
+<div class="book-item">
+    <h2>O Cortiço</h2>
+    <div class="book-cover">
+        <img src="img/image 10.png" alt="O Cortiço" />
+        <span class="age age-16">16+</span>
+    </div>
+    <div class="download-area">
+        <a href="img/o-cortico.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="img/pdf-icon.png" alt="PDF" style="width:20px; vertical-align:middle; margin-right:5px;" />
+        </a>
+        <a href="img/o-cortico.epub" target="_blank" rel="noopener noreferrer">
+            <img src="img/epub-icon.png" alt="EPUB" style="width:20px; vertical-align:middle; margin-right:8px;" />
+        </a>
+    </div>
+</div>
 
-            <div class="book-item">
-                <h2>A Mão e A Luva</h2>
-                <div class="book-cover">
-                    <img src="img/image 23.png" alt="A Mão e A Luva" />
-                    <span class="age age-16">16+</span>
-                </div>
-            </div>
+<div class="book-item">
+    <h2>A Mão e A Luva</h2>
+    <div class="book-cover">
+        <img src="img/image 23.png" alt="A Mão e A Luva" />
+        <span class="age age-16">16+</span>
+    </div>
+    <div class="download-area">
+        <a href="img/a-mao-e-a-luva.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="img/pdf-icon.png" alt="PDF" style="width:20px; vertical-align:middle; margin-right:5px;" />
+        </a>
+        <a href="img/a-mao-e-a-luva.epub" target="_blank" rel="noopener noreferrer">
+            <img src="img/epub-icon.png" alt="EPUB" style="width:20px; vertical-align:middle; margin-right:8px;" />
+        </a>
+    </div>
+</div>
 
-            <div class="book-item">
-                <h2>Quincas Borba</h2>
-                <div class="book-cover">
-                    <img src="img/image 21.png" alt="Quincas Borba" />
-                    <span class="age age-16">16+</span>
-                </div>
-            </div>
+<div class="book-item">
+    <h2>Quincas Borba</h2>
+    <div class="book-cover">
+        <img src="img/image 21.png" alt="Quincas Borba" />
+        <span class="age age-16">16+</span>
+    </div>
+    <div class="download-area">
+        <a href="img/quincas-borba.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="img/pdf-icon.png" alt="PDF" style="width:20px; vertical-align:middle; margin-right:5px;" />
+        </a>
+        <a href="img/quincas-borba.epub" target="_blank" rel="noopener noreferrer">
+            <img src="img/epub-icon.png" alt="EPUB" style="width:20px; vertical-align:middle; margin-right:8px;" />
+        </a>
+    </div>
+</div>
 
-            <div class="book-item">
-                <h2>O Alienista</h2>
-                <div class="book-cover">
-                    <img src="img/image 23 (1).png" alt="O Alienista" />
-                    <span class="age age-16">16+</span>
-                </div>
-            </div>
+<div class="book-item">
+    <h2>O Alienista</h2>
+    <div class="book-cover">
+        <img src="img/image 23 (1).png" alt="O Alienista" />
+        <span class="age age-16">16+</span>
+    </div>
+    <div class="download-area">
+        <a href="img/o-alienista.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="img/pdf-icon.png" alt="PDF" style="width:20px; vertical-align:middle; margin-right:5px;" />
+        </a>
+        <a href="img/o-alienista.epub" target="_blank" rel="noopener noreferrer">
+            <img src="img/epub-icon.png" alt="EPUB" style="width:20px; vertical-align:middle; margin-right:8px;" />
+        </a>
+    </div>
+</div>
 
-            <div class="book-item">
-                <h2>Helena</h2>
-                <div class="book-cover">
-                    <img src="img/image 23 (2).png" alt="Helena" />
-                    <span class="age age-16">16+</span>
-                </div>
-            </div>
-
+<div class="book-item">
+    <h2>Helena</h2>
+    <div class="book-cover">
+        <img src="img/image 23 (2).png" alt="Helena" />
+        <span class="age age-16">16+</span>
+    </div>
+    <div class="download-area">
+        <a href="img/helena.pdf" target="_blank" rel="noopener noreferrer">
+            <img src="img/pdf-icon.png" alt="PDF" style="width:20px; vertical-align:middle; margin-right:5px;" />
+        </a>
+        <a href="img/helena.epub" target="_blank" rel="noopener noreferrer">
+            <img src="img/epub-icon.png" alt="EPUB" style="width:20px; vertical-align:middle; margin-right:8px;" />
+        </a>
+    </div>
+</div>
         </section>
     </main>
     <footer>
@@ -216,4 +291,4 @@ footer span {
         <span>| Todos os direitos reservados (BR)</span>
     </footer>
 </body>
-</html>
+</html>   
