--- a/paginario/index.html
+++ b/paginario/index.html
@@ -96,7 +96,7 @@
     </div>
 
     <div class="rodape">
-        <a href="#">Política de Privacidade</a>
+        <a href="politicaprivacidade.html">Política de Privacidade</a>
         <a href="#">Termos de Uso</a>
         | Todos os direitos reservados (BR)
     </div>
