--- a/paginario/inicio.html
+++ b/paginario/inicio.html
@@ -31,13 +31,68 @@ header {
     height: 40px;
 }
 
-.menu-icon {
-    position: absolute;
-    left: 20px;
-    top: auto;
-    bottom: auto;
-    font-size: auto;
+.side-menu {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 250px;
+  height: 100%;
+  background-color: #86541c;
+  padding-top: 60px;
+  box-shadow: 2px 0 5px rgba(0,0,0,0.5);
+  transition: left 0.3s ease;
+  z-index: 1000;
 }
+
+.side-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.side-menu ul li {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.side-menu ul li a {
+  color: #eab97f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.1em;
+}
+
+.side-menu.open {
+  left: 0; 
+}
+
+.menu-icon {
+  cursor: pointer;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+  width: 30px;
+  height: 30px;
+}
+
+.close-icon {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.close-icon img {
+  width: 100%;
+  height: 100%;
+}
+
 
 .bookshelf {
     background: url('img/image.png') no-repeat center top;
@@ -123,6 +178,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 12px 0 14px 0;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
@@ -146,9 +202,28 @@ footer span {
 <body>
     <header>
         <div class="menu-icon">   
-          <img src="img/component 1.svg" alt="Menu" />
+          <img src="img/component 1.svg" alt="Abrir Menu" />
         </div>
     </header>
+    <nav id="side-menu" class="side-menu">
+          <div class="close-icon">
+    <img src="img/component 1.svg" alt="Fechar Menu"/>
+  </div>
+  <ul>
+    <li><a href="#" style="color: antiquewhite;">Página Inicial</a></li>
+    <li><a style="color: peru;">------------------------------</a></li>
+    <li><a href="#" style="color: antiquewhite;">Filtros</a></li>
+    <li><a href="#">Gênero</a></li>
+    <li><a href="#">Autor</a></li>
+    <li><a href="#">Editora</a></li>
+    <li><a href="#">Faixa Etária</a></li>
+    <li><a style="color: peru;">------------------------------</a></li>
+    <li><a href="#" style="color: antiquewhite;">Solicitação de livros</a></li>
+     <li><a style="color: peru;">------------------------------</a></li>
+    <li><a href="#" style="color: antiquewhite;">Meu Perfil</a></li>
+  </ul>
+</nav>
+
     <div class="bookshelf">
                   <h1>PÁGINA INICIAL</h1>
     </div>
@@ -282,12 +357,29 @@ footer span {
         </a>
     </div>
 </div>
+
         </section>
     </main>
-     <div class="rodape">
-        <a href="politicaprivacidade.html">Política de Privacidade</a>
+    <footer>
+        <a href="#">Política de Privacidade</a>
         <a href="#">Termos de Uso</a>
-        | Todos os direitos reservados (BR)
-    </div>
+        <span>| Todos os direitos reservados (BR)</span>
+    </footer>
+
+    <script>
+  const menuIcon = document.querySelector('.menu-icon');
+const sideMenu = document.getElementById('side-menu');
+const closeIcon = document.querySelector('.close-icon');
+
+menuIcon.addEventListener('click', () => {
+  sideMenu.classList.add('open'); 
+});
+
+closeIcon.addEventListener('click', () => {
+  sideMenu.classList.remove('open');
+});
+
+</script>
+
 </body>
-</html>   
+</html>
