--- a/paginario/inicio.html
+++ b/paginario/inicio.html
@@ -210,17 +210,17 @@ footer span {
     <img src="img/component 1.svg" alt="Fechar Menu"/>
   </div>
   <ul>
-    <li><a href="#" style="color: antiquewhite;">Página Inicial</a></li>
+    <li><a href="inicio.html" style="color: antiquewhite;">Página Inicial</a></li>
     <li><a style="color: peru;">------------------------------</a></li>
-    <li><a href="#" style="color: antiquewhite;">Filtros</a></li>
-    <li><a href="#">Gênero</a></li>
-    <li><a href="#">Autor</a></li>
-    <li><a href="#">Editora</a></li>
+    <li><a style="color: antiquewhite;">Filtros</a></li>
+    <li><a href="genero-literario.html">Gênero</a></li>
+    <li><a href="autores.php">Autor</a></li>
+    <li><a href="editora.html">Editora</a></li>
     <li><a href="#">Faixa Etária</a></li>
     <li><a style="color: peru;">------------------------------</a></li>
-    <li><a href="#" style="color: antiquewhite;">Solicitação de livros</a></li>
+    <li><a href="solicitacao.php" style="color: antiquewhite;">Solicitação de livros</a></li>
      <li><a style="color: peru;">------------------------------</a></li>
-    <li><a href="#" style="color: antiquewhite;">Meu Perfil</a></li>
+    <li><a href="meuperfil.php" style="color: antiquewhite;">Meu Perfil</a></li>
   </ul>
 </nav>
 
