--- a/paginario/genero-literario.html
+++ b/paginario/genero-literario.html
@@ -26,15 +26,69 @@ header {
     height: 40px;
 }
 
-.menu-icon {
-position: absolute;
-    left: 20px;
-    top: 5px;
-}
-
 .menu-icon img {
   width: 40px;
-  height: 35px;
+  height: 40px;
+}
+
+.side-menu {
+  position: fixed;
+  top: 0;
+  left: -250px;
+  width: 250px;
+  height: 100%;
+  background-color: #86541c;
+  padding-top: 60px;
+  box-shadow: 2px 0 5px rgba(0,0,0,0.5);
+  transition: left 0.3s ease;
+  z-index: 1000;
+}
+
+.side-menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.side-menu ul li {
+  margin: 20px 0;
+  text-align: center;
+}
+
+.side-menu ul li a {
+  color: #eab97f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.1em;
+}
+
+.side-menu.open {
+  left: 0; 
+}
+
+.menu-icon {
+  cursor: pointer;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  position: absolute;
+}
+
+.close-icon {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.close-icon img {
+  width: 100%;
+  height: 100%;
 }
 
 .texto-banner {
@@ -47,14 +101,6 @@ position: absolute;
     display:flex;
     justify-content: center;
     align-items: center;
-}
-
-.menu-icon {
-    position: absolute;
-    left: 20px;
-    top: auto;
-    bottom: auto;
-    font-size: auto;
 }
 
 h1 {
@@ -160,11 +206,29 @@ footer span {
 </head>
 <body>
     <header>
-        <div class="menu-icon">   
-          <img src="img/component 1.svg" alt="Menu" />
-        </div>
         <h2>FILTRO DE PESQUISA</h2>
+        <div class="menu-icon">   
+          <img src="img/component 1.svg" alt="Abrir Menu" />
+        </div>
     </header>
+    <nav id="side-menu" class="side-menu">
+          <div class="close-icon">
+    <img src="img/component 1.svg" alt="Fechar Menu"/>
+  </div>
+  <ul>
+    <li><a href="inicio.html" style="color: antiquewhite;">Página Inicial</a></li>
+    <li><a style="color: peru;">------------------------------</a></li>
+    <li><a style="color: antiquewhite;">Filtros</a></li>
+    <li><a href="genero-literario.html">Gênero</a></li>
+    <li><a href="autores.php">Autor</a></li>
+    <li><a href="editora.html">Editora</a></li>
+    <li><a href="#">Faixa Etária</a></li>
+    <li><a style="color: peru;">------------------------------</a></li>
+    <li><a href="solicitacao.php" style="color: antiquewhite;">Solicitação de livros</a></li>
+     <li><a style="color: peru;">------------------------------</a></li>
+    <li><a href="meuperfil.php" style="color: antiquewhite;">Meu Perfil</a></li>
+  </ul>
+</nav>
     <div class="texto-banner">
                   <h1>GÊNERO LITERÁRIO</h1>
     </div>
@@ -227,5 +291,21 @@ footer span {
     <a href="#">Termos de Uso</a>
     <span>| Todos os direitos reservados (BR)</span>
   </footer>
+
+    <script>
+  const menuIcon = document.querySelector('.menu-icon');
+const sideMenu = document.getElementById('side-menu');
+const closeIcon = document.querySelector('.close-icon');
+
+menuIcon.addEventListener('click', () => {
+  sideMenu.classList.add('open'); 
+});
+
+closeIcon.addEventListener('click', () => {
+  sideMenu.classList.remove('open');
+});
+
+</script>
+
 </body>
 </html>
