--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -376,7 +376,7 @@
         <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
-            <img src="img/cortico.png" alt="O Alienista">
+            <img src="img/razao.jpg" alt="O Alienista">
             <span class="badge">16+</span>
           </div>
         </a>
