--- a/paginario/editora.html
+++ b/paginario/editora.html
@@ -485,7 +485,7 @@
       </div>
 
         <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/senhora.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/senhora.jpg" alt="O Alienista">
@@ -496,7 +496,7 @@
 
 
          <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/sertoes.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/sertoes_.jpg" alt="O Alienista">
@@ -506,7 +506,7 @@
       </div>
 
   <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/amoreperdicao.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/amoreperdicao.png" alt="O Alienista">
@@ -516,7 +516,7 @@
       </div>
 
         <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/metamorfose.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/ametamorfose.png" alt="O Alienista">
@@ -526,7 +526,7 @@
       </div>
 
         <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/osmaias.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/osmaias.png" alt="O Alienista">
@@ -539,7 +539,7 @@
 
 
          <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/per.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/per.png" alt="O Alienista">
@@ -549,7 +549,7 @@
       </div>
 
   <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/amoreninha.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/amoreninha.png" alt="O Alienista">
@@ -559,7 +559,7 @@
       </div>
 
         <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/aescrava.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/aescrava.png" alt="O Alienista">
@@ -569,7 +569,7 @@
       </div>
 
         <div class="book-card">
-        <a href="link-do-livro.html" style="text-decoration: none; color: inherit;">
+        <a href="livros/osventosruivantes.html" style="text-decoration: none; color: inherit;">
           <h2>O Alienista</h2><br>
           <div class="cover-container">
             <img src="img/osventosruivantes.jpg" alt="O Alienista">
