--- a/paginario/livros/Oslusiadas.html
+++ b/paginario/livros/Oslusiadas.html
@@ -98,7 +98,7 @@
 
         <div class="download-links">
           <a href="os-lusiadas.epub">Baixar EPUB</a>
-          <a href="os-lusiadas.pdf">Baixar PDF</a>
+          <a href="oslusiadas.pdf">Baixar PDF</a>
         </div>
       </div>
     </section>
